syntax = "proto3";

package saturn;

service Saturn {
    rpc Initialize(InitRequest) returns (Void);
    rpc OpenFile(OpenRequest) returns (Node);
    rpc Edit(EditRequest) returns (Node);
}

message OpenRequest {
    string path = 1;
}

message Node {
    string NodeType = 1;
    string content = 2;
    map<string, Node> Tags = 3;
    map<string, Node> Children = 4;
}

message InitRequest {
    string workspace = 1;
    string configUri = 2;
}

message Void {}

message EditRequest {
    string path = 1;
    string editData = 2;
}